added status report

--- a/reportfiles/nav.html
+++ b/reportfiles/nav.html
@@ -10,9 +10,12 @@
 			<a class="brand" href="#">AEP html report</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
+					{{if .IncludeStatus}}{{if .IsStatus}}
+					<li class="active"><a href="#">Status</a></li>{{else}}
+					<li><a href="/staus">Status</a></li>{{end}}{{end}}
 					{{if .IsConfigure}}
 					<li class="active"><a href="#">Configuration</a></li>{{else}}
-					<li><a href="/">Configuration</a></li>{{end}}
+					<li><a href="/config">Configuration</a></li>{{end}}
 					{{if .IsSpec}}
 					<li class="active"><a href="#">Speciation</a></li>{{else}}
 					<li><a href="/speciate">Speciation</a></li>{{end}}
