--- a/reportfiles/header.html
+++ b/reportfiles/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AEP report :: {{.PageName}}></title>
+	<title>AEP report :: {{.PageName}}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
