Generates all surrogates, maybe passes all tests?

--- a/reportfiles/nav.html
+++ b/reportfiles/nav.html
@@ -22,6 +22,7 @@
 					{{if .IsSpatial}}
 					<li class="active"><a href="#">Spatialization</a></li>{{else}}
 					<li><a href="/spatial">Spatialization</a></li>{{end}}
+					<li><a href="/debug/pprof">pprof</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
