--- a/reportfiles/config.html
+++ b/reportfiles/config.html
@@ -7,8 +7,9 @@
 <tr><td>StartDate			</td><td>{{.Config.StartDate}}</td></tr>
 <tr><td>EndDate				</td><td>{{.Config.EndDate}}</td></tr>
 <tr><td>OutputType			</td><td>{{.Config.OutputType}}</td></tr>
-<tr><td>Speciate			</td><td>{{.Config.Speciate}}</td></tr>
-<tr><td>Spatialize			</td><td>{{.Config.Spatialize}}</td></tr>
+<tr><td>Speciate			</td><td>{{.Config.RunSpeciate}}</td></tr>
+<tr><td>Spatialize			</td><td>{{.Config.RunSpatialize}}</td></tr>
+<tr><td>Temporal			</td><td>{{.Config.RunTemporal}}</td></tr>
 <tr><td>SpecRefFile			</td><td>{{.Config.SpecRefFile}}</td></tr>
 <tr><td>SpecRefComboFile	</td><td>{{.Config.SpecRefComboFile}}</td></tr>
 <tr><td>SpecProFile			</td><td>{{.Config.SpecProFile}}</td></tr>
@@ -19,7 +20,8 @@
 <tr><td>TemporalRefFile		</td><td>{{.Config.TemporalRefFile}}</td></tr>
 <tr><td>MatchFullSCC		</td><td>{{.Config.MatchFullSCC}}</td></tr>
 <tr><td>EarthRadius			</td><td>{{.Config.EarthRadius}} meters</td></tr>
-<tr><td>WpsNamelist			</td><td>{{.Config.WpsNamelist}}</td></tr>
+<tr><td>WPSnamelist			</td><td>{{.Config.WPSnamelist}}</td></tr>
+<tr><td>WRFnamelist			</td><td>{{.Config.WRFnamelist}}</td></tr>
 <tr><td>RegenerateSpatialData</td><td>{{.Config.RegenerateSpatialData}}</td></tr>
 <tr><td>PostGISuser</td><td>{{.Config.PostGISuser}}</td></tr>
 <tr><td>PostGISdatabase</td><td>{{.Config.PostGISdatabase}}</td></tr>
